# rbpf

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
benches/: elf_loader.rs  jit_compile.rs  memory_mapping.rs  vm_execution.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: disassemble.rs  load_elf.rs  to_json.rs  uptime.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  dumb.rs  riscv_add64.rs  riscv_common.rs  riscv_lddw.rs  smart.rs  smart_jit_diff.rs  smarter_jit_diff.rs  verify_semantic_aware.rs
scripts/: increment-cargo-version.sh
src/: aligned_memory.rs  asm_parser.rs  assembler.rs  call_frames.rs  compiler.rs  debugger.rs  disassembler.rs  ebpf.rs  elf.rs  elf_parser_glue.rs  error.rs  helpers.rs  insn_builder.rs  interpreter.rs  jit.rs  lib.rs  memory_region.rs  riscv.rs  static_analysis.rs  syscalls.rs  user_error.rs  verifier.rs  vm.rs  x86.rs
src/elf_parser/: consts.rs  mod.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: assembler.rs  common.rs  disassembler.rs  misc.rs  ubpf_execution.rs  ubpf_jit_x86_64.rs  ubpf_unified.rs  ubpf_verifier.rs  ubpf_vm.rs
tests/elfs/: elf.ld  elfs.sh  entrypoint.c  helper.c  helper.h  pass_stack_reference.c  relative_call.c  reloc_64_relative.c  scratch_registers.c  syscall_static.c  syscall_static_unknown.c  unresolved_helper.c
