[package]

# Project metadata
name = "solana_rbpf"
version = "0.1.30"
authors = ["Solana Maintainers <maintainers@solana.com>"]

# Additional metadata for packaging
description = "Virtual machine and JIT compiler for eBPF programs"
repository = "https://github.com/solana-labs/rbpf"
readme = "README.md"
keywords = ["BPF", "eBPF", "interpreter", "JIT", "filtering"]
license = "Apache-2.0/MIT"

# Packaging directives
include = [
    "src/**",
    "examples/**",
    "tests/**",
    "bench/**",
    "LICENSE*",
    "Cargo.toml",
]

[dependencies]

combine = "2.5"
libc = "0.2"
time = "0.1"
byteorder = "1.2"
goblin = "0.2.2"
hash32 = "0.1.0"
log = "0.4.2"
thiserror = "1.0"
rand = "0.7.3"
scroll = "0.10.1"

[dev-dependencies]

elf = "0.0.10"
json = "0.11"
